--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>AngularJS App Example</title>
+
+    <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body data-ng-app="app">
 
