--- a/project/index.html
+++ b/project/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>AngularJS App Example</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body data-ng-app="app">
