add api calls for player stats

--- a/project/public/sections/home/home.html
+++ b/project/public/sections/home/home.html
@@ -1,2 +1,4 @@
 <h1>hello chris</h1>
 <div class="basic" ng-include="'sections/home/section1.html'"></div>
+<div class="basic" ng-include="'sections/home/section2.html'"></div>
+<div class="basic" ng-include="'sections/home/section3.html'"></div>
